# fwrouter

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  CONTROL_PLANE_TRANSFER.md  README.md  fwrouter_api_maintenance.py  pyproject.toml
backend/fwrouter_api/: __init__.py  main.py  schemas.py
backend/fwrouter_api/adapters/: dataplane.py  mihomo.py  rules_sources.py  (+3 more)
backend/scripts/: bootstrap-state.sh  check-clean-tree-surface.sh  check_boot_persistence.sh  collect-server-diagnostics.sh  export-clean-tree.sh  install-host-dependencies.sh  install-server-tree.sh  linux-live-acceptance.sh  post-clean-reset-bootstrap.sh  post-code-reconcile.sh  post-reset-rules-full-update.sh  post-reset-subscription-refresh.sh  setup-python-env.sh
backend/tests/: test_apply_orchestrator.py  test_apply_pipeline.py  test_bootstrap.py  test_control_plane_transfer.py  test_core_bypass.py  test_custom_servers.py  test_database_admin.py  test_dataplane_global.py  test_dnsmasq.py  test_full_refresh.py  test_global_mode_profiles.py  test_job_manager.py  test_jobs_retention.py  test_live_probe_cache.py  test_maintenance.py  test_mihomo_adapter.py  test_mihomo_config_runtime.py  test_routing_drift_reapply.py  test_routing_global_wave1.py  test_rules.py  test_runtime_logs.py  test_runtime_reconcile_actions.py  test_runtime_summary.py  test_scoped_egress.py  test_selector.py  test_subject_inventory.py  test_subject_policy.py  test_subscription_lifecycle.py  test_system_subjects.py  test_tailscale_module.py  test_traffic_accounting.py  test_ui_state.py  test_watchdog.py  test_xray.py
(+461 files in other folders)
